--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <h1>Hey <span style="color:#ff4d6d;">YOUR FUTURE BABE</span> 💕</h1>
     <p>Will you be my Valentine? 💘</p>
 
-    <img src="/images/me-test.jpg" alt="could be you and me 💖">
+    <img src="me-test.jpg" alt="could be you and me 💖">
 
     <br>
     <button id="yes" onclick="yesClicked()">Yes 💖</button>
@@ -167,3 +167,4 @@
 
 </body>
 </html>
+
