--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <style>
     body {
-      font-family: 'Comic Sans MS', cursive;
+      font-family: 'sans-serif';
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
       height: 100vh;
       overflow: hidden;
@@ -167,4 +167,5 @@
 
 </body>
 </html>
+
 
